@@ -30,6 +30,9 @@
    - stevesk@cvs.openbsd.org 2005/10/13 19:13:41
      [dns.c]
      unneeded #include, unused declaration, little knf; ok deraadt@
+   - stevesk@cvs.openbsd.org 2005/10/13 22:24:31
+     [auth2-gss.c gss-genr.c gss-serv.c monitor.c]
+     KNF; ok djm@
 
 20051102
  - (dtucker) [openbsd-compat/bsd-misc.c] Bug #1108: fix broken strdup().
@@ -3163,4 +3166,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3933 2005/11/05 04:06:38 djm Exp $
+$Id: ChangeLog,v 1.3934 2005/11/05 04:07:05 djm Exp $
